--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "David López",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.5",
+    "mongoose-unique-validator": "^2.0.1",
     "mysql": "^2.15.0"
   },
   "devDependencies": {
